refactor(bff): custom & builtin tool
