# internal/bff-service/model/response/tool.go
@@ -2,41 +2,35 @@ package response
 
 import "github.com/UnicomAI/wanwu/internal/bff-service/model/request"
 
-type CustomToolApiAuthWebRequest struct {
-	Type             string `json:"type"`             // 认证类型: None 或 APIKey
-	APIKey           string `json:"apiKey"`           // apiKey
-	CustomHeaderName string `json:"customHeaderName"` // 自定义头名
-	AuthType         string `json:"authType"`         // Auth类型
+type CustomToolDetail struct {
+	CustomToolInfo
+	Schema        string                              `json:"schema"`        // schema
+	ApiAuth       request.CustomToolApiAuthWebRequest `json:"apiAuth"`       // apiAuth
+	ApiList       []CustomToolActionInfo              `json:"apiList"`       // action列表
+	PrivacyPolicy string                              `json:"privacyPolicy"` // 隐私政策
+	ToolSquareID  string                              `json:"toolSquareId"`  // 广场mcpId(非空表示来源于广场)
 }
 
-type CustomToolApiResponse struct {
+type CustomToolInfo struct {
+	CustomToolId string `json:"customToolId"` // 自定义工具id
+	Name         string `json:"name"`         // 名称
+	Description  string `json:"description"`  // 描述
+}
+
+type CustomToolActionInfo struct {
 	Name   string `json:"name"`
 	Method string `json:"method"`
 	Path   string `json:"path"`
 }
 
-type CustomToolDetail struct {
-	CustomToolId  string                      `json:"customToolId"`  // 自定义工具id
-	Name          string                      `json:"name"`          // 名称
-	Description   string                      `json:"description"`   // 描述
-	Schema        string                      `json:"schema"`        // schema
-	ApiAuth       CustomToolApiAuthWebRequest `json:"apiAuth"`       // apiAuth
-	ApiList       []CustomToolApiResponse     `json:"apiList"`       // api列表
-	PrivacyPolicy string                      `json:"privacyPolicy"` // 隐私政策
-	ToolSquareID  string                      `json:"toolSquareId"`  // 广场mcpId(非空表示来源于广场)
-}
-
-type CustomToolCell struct {
-	CustomToolId string `json:"customToolId"` // 自定义工具id
-	Name         string `json:"name"`         // 名称
-	Description  string `json:"description"`  // 描述
-}
-
 type CustomToolSelect struct {
-	UniqueId     string `json:"uniqueId"`     // 统一的id
-	CustomToolId string `json:"customToolId"` // 自定义工具id
-	Name         string `json:"name"`         // 名称
-	Description  string `json:"description"`  // 描述
+	UniqueId string `json:"uniqueId"` // 随机unique id(每次动态生成)
+	CustomToolInfo
+}
+
+type ToolSquareDetail struct {
+	ToolSquareInfo
+	ToolSquareActions
 }
 
 type ToolSquareInfo struct {
@@ -47,15 +41,10 @@ type ToolSquareInfo struct {
 	Tags         []string       `json:"tags"`         // 标签
 }
 
-type BuiltInTools struct {
+type ToolSquareActions struct {
 	NeedApiKeyInput bool      `json:"needApiKeyInput"` // 是否需要apiKey输入
 	APIKey          string    `json:"apiKey"`          // apiKey
-	Tools           []MCPTool `json:"tools"`           // 工具列表
+	Tools           []MCPTool `json:"tools"`           // action列表
 	Detail          string    `json:"detail"`          // 详细描述
 	ActionSum       int64     `json:"actionSum"`       // action总数
-}
-
-type ToolSquareDetail struct {
-	ToolSquareInfo
-	BuiltInTools
 }
